Fix paper preview rendering in dark mode (#682)

--- a/docs/src/pages/people.module.css
+++ b/docs/src/pages/people.module.css
@@ -6,6 +6,10 @@
   padding-bottom: 5px;
 }
 
+[data-theme='dark'] .personContainer {
+  box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.15);
+}
+
 .personGroup {
   display: flex;
   justify-content: center;
